Fix recipe image green tilt on dark mode
(https://github.com/ownrecipes/OwnRecipes/issues/28)

--- a/src/app/css/core.css
+++ b/src/app/css/core.css
@@ -258,3 +258,6 @@ html[data-theme="dark"] .accordion.accordion-flush .accordion-button.collapsed::
 html[data-theme="dark"] img {
   opacity: 0.875;
 }
+html[data-theme="dark"] img:hover {
+  opacity: 1.0;
+}
